# sarathy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: handoff_document.md
sarathy/: agent.py  cli.py  config.py  llm.py  pricing.py  prompts.py  tools.py
tests/: test_sarathy.py
