[project]
name = "sarathy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.43.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "rich>=15.0.0",
]

[project.scripts]
sarathy = "sarathy.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
